--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "my-chat",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/server.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,9 @@
   "homepage": "https://github.com/HoangDien17/My-chat#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.12.2"
+    "express-handlebars": "^5.2.1",
+    "mongoose": "^5.12.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
