--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   },
   "homepage": "https://github.com/HoangDien17/My-chat#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.4.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
+    "express-session": "^1.17.1",
+    "express-validator": "^6.10.0",
     "mongoose": "^5.12.2",
     "path": "^0.12.7"
   },
