--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
     "mongoose": "^5.12.2",
+    "nodemailer": "^6.5.0",
     "path": "^0.12.7",
     "uuid": "^8.3.2"
   },
