--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "express-handlebars": "^5.2.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
+    "handlebars-helpers": "^0.10.0",
     "mongoose": "^5.12.2",
+    "mongoose-delete": "^0.5.3",
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
