--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "handlebars-helpers": "^0.10.0",
     "mongoose": "^5.12.2",
     "mongoose-delete": "^0.5.3",
+    "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
