--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-handlebars": "^5.2.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
+    "fs-extra": "^9.1.0",
     "handlebars-helpers": "^0.10.0",
     "mongoose": "^5.12.2",
     "mongoose-delete": "^0.5.3",
