--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-validator": "^6.10.0",
     "fs-extra": "^9.1.0",
     "handlebars-helpers": "^0.10.0",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.2",
     "mongoose-delete": "^0.5.3",
     "multer": "^1.4.2",
